# bert_sentiment_analysis

./: .gitignore  pyproject.toml  readme.md  tokenized_data.pt
data/raw/: BERT_synthetic_input_data.csv
notebooks/: exploratory.ipynb
src/: data_util.py  predict.py  train.py
